--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>React App</title>
+    <script src="https://kit.fontawesome.com/9bc8eec26b.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
